--- a/app/page.module.css
+++ b/app/page.module.css
@@ -13,26 +13,27 @@
   align-items: center;
   gap: 5%;
   width: 100%;
-  flex-wrap: wrap; /* Cho phép xuống hàng khi màn hình nhỏ */
-  padding-left: 1%;
-  padding-right: 6%;
+  /* flex-wrap: wrap;  */
+  /* padding: 0 1%; */
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .image {
-  flex: 1 1 35%; /* chiếm 40% chiều rộng */
-  max-width: 500px;
+  flex: 1 1 35%; 
+  max-width: 540px;
 }
 
 .image img {
-  width: 80vh;
-  height: 100%;
+  width: 100%;
+  height: auto;
   border-radius: 12px;
-  /* margin-top: 3vh; */
   box-shadow: 0 4px 12px rgba(82, 81, 82, 0.4);
+  object-fit: cover; /* nếu muốn ảnh luôn lấp đầy */
 }
 
 .intro {
-  flex: 1 1 60%;  
+  flex: 0 0 60%;
   max-width: 600px;
 }
 
